# test-agent

./: .gitignore  CODE_READ_REPORT.md  CRAWLER_DESIGN.md  DATAPROC_IMAGE_LAYOUT_TIER.md  DEPLOY_DEFICIENCY_REPORT.md  DEPLOY_DEFICIENCY_REPORT_PHASE_B.md  FIX_RETRIEVAL_REGRESSION.md  LLM_SETTINGS_DESIGN.md  NUTRITION_SCHEMA_DESIGN.md  OCR_BENCH_5NEW_REPORT.md  OCR_LLM_OPENSOURCE_LANDSCAPE.md  OCR_OFFICIAL_ADAPTER_REPORT.md  OCR_SCHEME1_VALIDATION.md  OCR_TOOL_VS_VISION_CROSSCHECK.md  PARADIGM2_EXTRACTION_DESIGN.md  README.md  STATE.md  TBPU_VS_NOTBPU_VS_VL.md  architecture.html  review_round2.md  review_round3.md  review_round4.md  review_round5.md  review_round6.md  run_data_import.py
deploy/: .env.example  Dockerfile  dependency-manifest.yaml  docker-compose.yml  enterprise.yaml  requirements-full.txt  requirements-light.txt  requirements.txt
harness/: _debug_p5.py  _diag_order.py  _diag_trace2.py  _trace_anorexia.py  _trace_medical_report.py  _trace_temporal.py  probe_dbstatus_leak.py  probe_f3_kind_e2e.py  sim_full_pipeline.py  test_admin_api.py  test_admin_dbstatus_scoped.py  test_baby_capability_mock.py  test_baby_profile.py  test_baby_schema_v2.py  test_cross_context_pollution.py  test_data_encryption.py  test_dataproc_feedback.py  test_dataproc_ocr.py  test_dataproc_pdf.py  test_dataproc_resolver.py  test_deploy_egress.py  test_deploy_env_override.py  test_deploy_manifest.py  test_e2e_closed_loop.py  test_f3_kind_e2e.py  test_gui_backend.py  (+23 more)
tools/dataproc/gui/src-tauri/: Cargo.toml  tauri.conf.json
tools/dataproc/gui/src-tauri/src/: lib.rs  main.rs
(+213 files in other folders)
